# QT-CPU-GUI

./: CMakeLists.txt  CMakeLists.txt.user.ce1a03b  README.md  main.cpp  mainwidgets.h  mainwindow.cpp  mainwindow.h
